--- a/scripts/requirements.txt
+++ b/scripts/requirements.txt
@@ -32,9 +32,9 @@ r-spp ==1.15.5  # 1.14 in docker/singularity image, 1.16 has lwcc() error
 libiconv
 
 bwa ==0.7.17
-bowtie2 ==2.3.4.3
-bowtie=1.1.2
-nimnexus==0.1.1
+#bowtie2 ==2.3.4.3
+bowtie #=1.1.2
+nimnexus #==0.1.1
 pysam ==0.15.3
 pybedtools ==0.8.0
 phantompeakqualtools ==1.2.2
